x-pack/plugin/piescript/src/main/java/org/elasticsearch/xpack/piescript/parser/PiescriptAntlrParser.java
// Generated from /Users/t.vilaverde/Workspace/Elastic/elasticsearch/x-pack/plugin/piescript/src/main/antlr/PiescriptAntlrParser.g4 by ANTLR 4.13.1
package org.elasticsearch.xpack.piescript.parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({ "all", "this-escape", "cast", "warnings", "unchecked", "unused", "CheckReturnValue" })
public class PiescriptAntlrParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int LET = 1, IN = 2, FN = 3, IF = 4, THEN = 5, ELSE = 6, TRUE = 7, FALSE = 8, NULL = 9, MATCH = 10, QUERY = 11,
        SPAWN = 12, WHEN = 13, PAR = 14, DO = 15, UNDERSCORE = 16, PIPE_OP = 17, OR_OP = 18, AND_OP = 19, ARROW = 20, EQ = 21, NEQ = 22,
        LTE = 23, GTE = 24, LT = 25, GT = 26, PLUS = 27, MINUS = 28, ASTERISK = 29, SLASH = 30, PERCENT = 31, BANG = 32, DOT = 33, COMMA =
            34, COLON = 35, SEMICOLON = 36, ASSIGN = 37, AMP = 38, BAR = 39, LPAREN = 40, RPAREN = 41, LBRACE = 42, RBRACE = 43,
        INTEGER_LITERAL = 44, DECIMAL_LITERAL = 45, QUOTED_STRING = 46, UPPER_IDENT = 47, LOWER_IDENT = 48, LINE_COMMENT = 49,
        MULTILINE_COMMENT = 50, WS = 51, ESQL_BODY = 52, ESQL_WS = 53;
    public static final int RULE_ident = 0, RULE_program = 1, RULE_topBinding = 2, RULE_expr = 3, RULE_whenBinding = 4, RULE_pipeExpr = 5,
        RULE_orExpr = 6, RULE_andExpr = 7, RULE_eqExpr = 8, RULE_cmpExpr = 9, RULE_addExpr = 10, RULE_mulExpr = 11, RULE_unaryExpr = 12,
        RULE_appExpr = 13, RULE_primary = 14, RULE_recordField = 15, RULE_recordUpdate = 16, RULE_block = 17, RULE_blockStmt = 18,
        RULE_param = 19, RULE_type = 20, RULE_typeApp = 21, RULE_typeAtom = 22, RULE_rowType = 23, RULE_rowField = 24;

    private static String[] makeRuleNames() {
        return new String[] {
            "ident",
            "program",
            "topBinding",
            "expr",
            "whenBinding",
            "pipeExpr",
            "orExpr",
            "andExpr",
            "eqExpr",
            "cmpExpr",
            "addExpr",
            "mulExpr",
            "unaryExpr",
            "appExpr",
            "primary",
            "recordField",
            "recordUpdate",
            "block",
            "blockStmt",
            "param",
            "type",
            "typeApp",
            "typeAtom",
            "rowType",
            "rowField" };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {
            null,
            "'let'",
            "'in'",
            "'fn'",
            "'if'",
            "'then'",
            "'else'",
            "'true'",
            "'false'",
            "'null'",
            "'match'",
            "'query'",
            "'spawn'",
            "'when'",
            "'par'",
            "'do'",
            "'_'",
            "'|>'",
            "'||'",
            "'&&'",
            "'->'",
            "'=='",
            "'!='",
            "'<='",
            "'>='",
            "'<'",
            "'>'",
            "'+'",
            "'-'",
            "'*'",
            "'/'",
            "'%'",
            "'!'",
            "'.'",
            "','",
            "':'",
            "';'",
            "'='",
            "'&'",
            "'|'",
            "'('",
            "')'",
            "'{'",
            "'}'" };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] {
            null,
            "LET",
            "IN",
            "FN",
            "IF",
            "THEN",
            "ELSE",
            "TRUE",
            "FALSE",
            "NULL",
            "MATCH",
            "QUERY",
            "SPAWN",
            "WHEN",
            "PAR",
            "DO",
            "UNDERSCORE",
            "PIPE_OP",
            "OR_OP",
            "AND_OP",
            "ARROW",
            "EQ",
            "NEQ",
            "LTE",
            "GTE",
            "LT",
            "GT",
            "PLUS",
            "MINUS",
            "ASTERISK",
            "SLASH",
            "PERCENT",
            "BANG",
            "DOT",
            "COMMA",
            "COLON",
            "SEMICOLON",
            "ASSIGN",
            "AMP",
            "BAR",
            "LPAREN",
            "RPAREN",
            "LBRACE",
            "RBRACE",
            "INTEGER_LITERAL",
            "DECIMAL_LITERAL",
            "QUOTED_STRING",
            "UPPER_IDENT",
            "LOWER_IDENT",
            "LINE_COMMENT",
            "MULTILINE_COMMENT",
            "WS",
            "ESQL_BODY",
            "ESQL_WS" };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "PiescriptAntlrParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public PiescriptAntlrParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class IdentContext extends ParserRuleContext {
        public TerminalNode UPPER_IDENT() {
            return getToken(PiescriptAntlrParser.UPPER_IDENT, 0);
        }

        public TerminalNode LOWER_IDENT() {
            return getToken(PiescriptAntlrParser.LOWER_IDENT, 0);
        }

        public IdentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_ident;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).enterIdent(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).exitIdent(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PiescriptAntlrParserVisitor) return ((PiescriptAntlrParserVisitor<? extends T>) visitor).visitIdent(
                this
            );
            else return visitor.visitChildren(this);
        }
    }

    public final IdentContext ident() throws RecognitionException {
        IdentContext _localctx = new IdentContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_ident);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(50);
                _la = _input.LA(1);
                if (!(_la == UPPER_IDENT || _la == LOWER_IDENT)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ProgramContext extends ParserRuleContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(PiescriptAntlrParser.EOF, 0);
        }

        public List<TopBindingContext> topBinding() {
            return getRuleContexts(TopBindingContext.class);
        }

        public TopBindingContext topBinding(int i) {
            return getRuleContext(TopBindingContext.class, i);
        }

        public TerminalNode SEMICOLON() {
            return getToken(PiescriptAntlrParser.SEMICOLON, 0);
        }

        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).enterProgram(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).exitProgram(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PiescriptAntlrParserVisitor) return ((PiescriptAntlrParserVisitor<? extends T>) visitor).visitProgram(
                this
            );
            else return visitor.visitChildren(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_program);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(55);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(52);
                                topBinding();
                            }
                        }
                    }
                    setState(57);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                }
                setState(58);
                expr();
                setState(60);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == SEMICOLON) {
                    {
                        setState(59);
                        match(SEMICOLON);
                    }
                }

                setState(62);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class TopBindingContext extends ParserRuleContext {
        public TerminalNode LET() {
            return getToken(PiescriptAntlrParser.LET, 0);
        }

        public IdentContext ident() {
            return getRuleContext(IdentContext.class, 0);
        }

        public TerminalNode ASSIGN() {
            return getToken(PiescriptAntlrParser.ASSIGN, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode SEMICOLON() {
            return getToken(PiescriptAntlrParser.SEMICOLON, 0);
        }

        public TerminalNode COLON() {
            return getToken(PiescriptAntlrParser.COLON, 0);
        }

        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TopBindingContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_topBinding;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).enterTopBinding(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).exitTopBinding(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PiescriptAntlrParserVisitor) return ((PiescriptAntlrParserVisitor<? extends T>) visitor).visitTopBinding(
                this
            );
            else return visitor.visitChildren(this);
        }
    }

    public final TopBindingContext topBinding() throws RecognitionException {
        TopBindingContext _localctx = new TopBindingContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_topBinding);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(64);
                match(LET);
                setState(65);
                ident();
                setState(68);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == COLON) {
                    {
                        setState(66);
                        match(COLON);
                        setState(67);
                        type();
                    }
                }

                setState(70);
                match(ASSIGN);
                setState(71);
                expr();
                setState(72);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ExprContext extends ParserRuleContext {
        public ExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expr;
        }

        public ExprContext() {}

        public void copyFrom(ExprContext ctx) {
            super.copyFrom(ctx);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SpawnExprContext extends ExprContext {
        public TerminalNode SPAWN() {
            return getToken(PiescriptAntlrParser.SPAWN, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public SpawnExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).enterSpawnExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).exitSpawnExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PiescriptAntlrParserVisitor) return ((PiescriptAntlrParserVisitor<? extends T>) visitor).visitSpawnExpr(
                this
            );
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class LetExprContext extends ExprContext {
        public TerminalNode LET() {
            return getToken(PiescriptAntlrParser.LET, 0);
        }

        public IdentContext ident() {
            return getRuleContext(IdentContext.class, 0);
        }

        public TerminalNode ASSIGN() {
            return getToken(PiescriptAntlrParser.ASSIGN, 0);
        }

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public TerminalNode IN() {
            return getToken(PiescriptAntlrParser.IN, 0);
        }

        public TerminalNode COLON() {
            return getToken(PiescriptAntlrParser.COLON, 0);
        }

        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public LetExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).enterLetExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).exitLetExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PiescriptAntlrParserVisitor) return ((PiescriptAntlrParserVisitor<? extends T>) visitor).visitLetExpr(
                this
            );
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class LambdaExprContext extends ExprContext {
        public TerminalNode FN() {
            return getToken(PiescriptAntlrParser.FN, 0);
        }

        public TerminalNode ARROW() {
            return getToken(PiescriptAntlrParser.ARROW, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public List<ParamContext> param() {
            return getRuleContexts(ParamContext.class);
        }

        public ParamContext param(int i) {
            return getRuleContext(ParamContext.class, i);
        }

        public LambdaExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).enterLambdaExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).exitLambdaExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PiescriptAntlrParserVisitor) return ((PiescriptAntlrParserVisitor<? extends T>) visitor).visitLambdaExpr(
                this
            );
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class WhenExprContext extends ExprContext {
        public TerminalNode WHEN() {
            return getToken(PiescriptAntlrParser.WHEN, 0);
        }

        public List<WhenBindingContext> whenBinding() {
            return getRuleContexts(WhenBindingContext.class);
        }

        public WhenBindingContext whenBinding(int i) {
            return getRuleContext(WhenBindingContext.class, i);
        }

        public TerminalNode ARROW() {
            return getToken(PiescriptAntlrParser.ARROW, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public List<TerminalNode> AMP() {
            return getTokens(PiescriptAntlrParser.AMP);
        }

        public TerminalNode AMP(int i) {
            return getToken(PiescriptAntlrParser.AMP, i);
        }

        public WhenExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).enterWhenExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).exitWhenExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PiescriptAntlrParserVisitor) return ((PiescriptAntlrParserVisitor<? extends T>) visitor).visitWhenExpr(
                this
            );
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ExprPipeContext extends ExprContext {
        public PipeExprContext pipeExpr() {
            return getRuleContext(PipeExprContext.class, 0);
        }

        public ExprPipeContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).enterExprPipe(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).exitExprPipe(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PiescriptAntlrParserVisitor) return ((PiescriptAntlrParserVisitor<? extends T>) visitor).visitExprPipe(
                this
            );
            else return visitor.visitChildren(this);
        }
    }

    public final ExprContext expr() throws RecognitionException {
        ExprContext _localctx = new ExprContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_expr);
        int _la;
        try {
            setState(109);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case LET:
                    _localctx = new LetExprContext(_localctx);
                    enterOuterAlt(_localctx, 1); {
                    setState(74);
                    match(LET);
                    setState(75);
                    ident();
                    setState(78);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == COLON) {
                        {
                            setState(76);
                            match(COLON);
                            setState(77);
                            type();
                        }
                    }

                    setState(80);
                    match(ASSIGN);
                    setState(81);
                    expr();
                    setState(82);
                    match(IN);
                    setState(83);
                    expr();
                }
                    break;
                case FN:
                    _localctx = new LambdaExprContext(_localctx);
                    enterOuterAlt(_localctx, 2); {
                    setState(85);
                    match(FN);
                    setState(87);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(86);
                                param();
                            }
                        }
                        setState(89);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 423311976693760L) != 0));
                    setState(91);
                    match(ARROW);
                    setState(92);
                    expr();
                }
                    break;
                case SPAWN:
                    _localctx = new SpawnExprContext(_localctx);
                    enterOuterAlt(_localctx, 3); {
                    setState(94);
                    match(SPAWN);
                    setState(95);
                    expr();
                }
                    break;
                case WHEN:
                    _localctx = new WhenExprContext(_localctx);
                    enterOuterAlt(_localctx, 4); {
                    setState(96);
                    match(WHEN);
                    setState(97);
                    whenBinding();
                    setState(102);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == AMP) {
                        {
                            {
                                setState(98);
                                match(AMP);
                                setState(99);
                                whenBinding();
                            }
                        }
                        setState(104);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(105);
                    match(ARROW);
                    setState(106);
                    expr();
                }
                    break;
                case IF:
                case TRUE:
                case FALSE:
                case NULL:
                case QUERY:
                case MINUS:
                case BANG:
                case DOT:
                case LPAREN:
                case LBRACE:
                case INTEGER_LITERAL:
                case DECIMAL_LITERAL:
                case QUOTED_STRING:
                case UPPER_IDENT:
                case LOWER_IDENT:
                    _localctx = new ExprPipeContext(_localctx);
                    enterOuterAlt(_localctx, 5); {
                    setState(108);
                    pipeExpr(0);
                }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class WhenBindingContext extends ParserRuleContext {
        public TerminalNode LPAREN() {
            return getToken(PiescriptAntlrParser.LPAREN, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public IdentContext ident() {
            return getRuleContext(IdentContext.class, 0);
        }

        public TerminalNode RPAREN() {
            return getToken(PiescriptAntlrParser.RPAREN, 0);
        }

        public WhenBindingContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_whenBinding;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).enterWhenBinding(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).exitWhenBinding(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PiescriptAntlrParserVisitor) return ((PiescriptAntlrParserVisitor<? extends T>) visitor)
                .visitWhenBinding(this);
            else return visitor.visitChildren(this);
        }
    }

    public final WhenBindingContext whenBinding() throws RecognitionException {
        WhenBindingContext _localctx = new WhenBindingContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_whenBinding);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(111);
                match(LPAREN);
                setState(112);
                expr();
                setState(113);
                ident();
                setState(114);
                match(RPAREN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PipeExprContext extends ParserRuleContext {
        public PipeExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_pipeExpr;
        }

        public PipeExprContext() {}

        public void copyFrom(PipeExprContext ctx) {
            super.copyFrom(ctx);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PipeOpContext extends PipeExprContext {
        public PipeExprContext pipeExpr() {
            return getRuleContext(PipeExprContext.class, 0);
        }

        public TerminalNode PIPE_OP() {
            return getToken(PiescriptAntlrParser.PIPE_OP, 0);
        }

        public OrExprContext orExpr() {
            return getRuleContext(OrExprContext.class, 0);
        }

        public PipeOpContext(PipeExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).enterPipeOp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).exitPipeOp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PiescriptAntlrParserVisitor) return ((PiescriptAntlrParserVisitor<? extends T>) visitor).visitPipeOp(
                this
            );
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PipePassthroughContext extends PipeExprContext {
        public OrExprContext orExpr() {
            return getRuleContext(OrExprContext.class, 0);
        }

        public PipePassthroughContext(PipeExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).enterPipePassthrough(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PiescriptAntlrParserListener) ((PiescriptAntlrParserListener) listener).exitPipePassthrough(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PiescriptAntlrParserVisitor) return ((PiescriptAntlrParserVisitor<? extends T>) visitor)
                .visitPipePassthrough(this);
            else return visitor.visitChildren(this);
        }
    }

    public final PipeExprContext pipeExpr() throws RecognitionException {
        return pipeExpr(0);
    }

    private PipeExprContext pipeExpr(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        PipeExprContext _localctx = new PipeExprContext(_ctx, _parentState);
        PipeExprContext _prevctx = _localctx;
        int _startState = 10;
        enterRecursionRule(_localctx, 10, RULE_pipeExpr, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    _localctx = new PipePassthroughContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;
